--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	  font-family: Lucida Grande, Lucida Sans, Arial, Helvetica Neue, Verdana, Geneva, sans-serif;
 	  font-size: 11px; font-weight: normal; text-decoration: none;
 		  line-height: 1.5em;
-		  margin:0;
 	}
 	a img { 
 		border: 0px solid transparent;
@@ -29,14 +28,18 @@
 	h1 {
 	    font-family: Arial, Helvetica Neue, Verdana, Geneva, sans-serif;
 		width: 100%; letter-spacing: 0.1em;
+		margin-bottom: 1em; font-size: 1.65em;
 	}
 	canvas { 
 		display: block; 
 		outline: 0px; 
+		margin-bottom: 1.5em; 
 	}
 	#content { 
-		margin: 0; padding: 0;
+		margin: 50px auto 0px auto; padding: 25px 25px 15px 25px;
 		width: 960px; min-width: 300px; overflow: auto;
+		border-left: 1px solid #444; border-top: 1px solid #444; 
+		border-right: 1px solid #333; border-bottom: 1px solid #333;
 		background-color: #3d3d3d;
 	}
 		</style>
@@ -62,6 +65,13 @@ function getProcessingSketchId () { return 'Blocs'; }
 					<p>JavaScript is required to view the contents of this page.</p>
 				</noscript>
 	    	</div>
+			<h1>Blocs</h1>
+    		<p id="description"></p>
+			<p id="sources">Source code: <a href="Blocs.pde">Blocs</a> </p>
+			<p>
+			Built with <a href="http://processing.org" title="Processing">Processing</a>
+			and <a href="http://processingjs.org" title="Processing.js">Processing.js</a>
+			</p>
 		</div>
 	</body>
 </html>
