--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 	<head>
+	<meta name="google-site-verification" content="7HauV_99zT2f0P2eaIIvtW8Uqh_M2ache8r0iT7qhNc" />
 		<!-- - - - - - - - - - - - - - - - - - - - - 
 		+
 		+    Wondering how this works? 
@@ -17,7 +18,7 @@
 function getProcessingSketchId () { return 'Blocs'; }
 </script>
 	</head>
-	<body style = "margin: 0">
+	<body style = "margin: 0; text-align:center">
 		<div id="content">
 			<div>
 				<canvas id="Blocs" data-processing-sources="Blocs.pde" 
